# plex-releases-summary

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  README.md  codecov.yml  docker-compose.dev.local.yml.example  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  my-plex-releases-summary.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test.sh
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: CODEOWNERS  conventional-commit-types.json  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cleanup-registry.yml  docker-publish.yml  draft-release.yml  pr-label-check.yml  pr-label.yml  pr-title-check.yml  quality-and-tests.yml  release-drafter-sync.yml  release-drafter.yml  sync-develop.yml  test.yml
configs/: README.md  config-dev.yml  config.yml  config.yml.example
docs/: CONFIGURATION.md
scripts/: README.md  clean.sh  compile-deps.sh  dev-container-shell.sh  dev-shell.sh  dev.sh  format.sh  logs.sh  start.sh  stop.sh  test.sh  typecheck.sh
src/: app.py  config.py  discord_client.py  logging_config.py  scheduler.py  tautulli_client.py
tests/: __init__.py  test_app.py  test_config.py  test_discord_client.py  test_discord_markdown.py  test_integration.py  test_logging_config.py  test_scheduler.py  test_tautulli_client.py
