[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[project]
name = "plex-releases-summary"
dynamic = ["version"]
description = "Fetches recently added Plex media via Tautulli and posts Discord summaries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "APScheduler>=3.10.4,<4.0.0",
    "discord-webhook>=1.3.1,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pydantic>=2.6.0,<3.0.0",
]

[tool.mypy]
# MyPy configuration for type checking
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "discord_webhook",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.ruff]
# Ruff configuration for linting and formatting
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "G",    # flake8-logging-format (enforces %-style logging, disallows f-strings in log calls)
    "RUF",  # Ruff-native rules (catches misc Python anti-patterns)
    "FURB", # refurb rules (modernisation checks)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF001",  # ambiguous unicode in strings (intentional emoji / smart quotes in user-visible messages)
    "RUF002",  # ambiguous unicode in docstrings (same reason)
    "RUF003",  # ambiguous unicode in comments (e.g. × as multiplication sign)
    "RUF012",  # mutable class variable should use ClassVar (not always appropriate)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.black]
# Black code formatter configuration
# Note: Black is used as the formatter; ruff is used only as a linter (ruff check).
# ruff format is intentionally not enabled to avoid conflicts with Black.
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.git
  | \.venv
  | \.eggs
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that may require mocked external services",
    "slow: Tests that take longer to run",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
